--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
   <body>
     <!-- TODO: Say something interesting in the heading tag... -->
-    <h1>...</h1>
+    <h1>
+      <strong>This is a header, its pretty cool</strong>
+    </h1>
 
     <div class="purple">
-      <span>This text should be purple</span>
+      <span>This text isn't purple</span>
     </div>
 
-    <button>Show me some animal trivia!</button>
+    <button>Click Me!</button>
 
     <div id="results-area"></div>
     <div id="question-display"></div>
