--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span>This text isn't purple</span>
     </div>
 
-    <button>Click Me!</button>
+    <button>B U T T O N</button>
 
     <div id="results-area"></div>
     <div id="question-display"></div>
