--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <body>
     <!-- TODO: Say something interesting in the heading tag... -->
-    <h1>...</h1>
+    <h1>This is a header, pretty cool right?</h1>
 
     <div class="purple">
-      <span>This text should be purple</span>
+      <span>This text is not purple</span>
     </div>
 
-    <button>Click Me!</button>
+    <button>Useless button</button>
 
     <div id="results-area"></div>
   </body>
