--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </div>
 
     <button>Useless button</button>
+    <span>Some files I wanted to save</span>
+    <!-- Uploaded file in different location than HTML file -->
+<a href="D:\Downloads\Cyclops voices\AI_abandon.wav" download>Link text</a>
 
     <div id="results-area"></div>
   </body>
