--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button>Useless button</button>
     <span>Some files I wanted to save</span>
     <!-- Uploaded file in different location than HTML file -->
-<a href="D:\Downloads\Cyclops voices\AI_abandon.wav" download>Link text</a>
+<a href="D:\Downloads\Cyclops voices\AI_abandon.wav" download>Click Here</a>
 
     <div id="results-area"></div>
   </body>
