--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     <button>Useless button</button>
     <span>Some files I wanted to save</span>
-    <!-- Uploaded file in different location than HTML file -->
-<a href="D:\Downloads\Cyclops Voices\AI_cavitate.wav" download>Click Here</a>
+    <a href="https://drive.google.com/file/d/1dV-W0VkFTyAdJVI_WKG7_9kDVMFC6N-q/view?usp=sharing">Download Test File</a>
 
     <div id="results-area"></div>
   </body>
