--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <button>Useless button</button>
     <span>Some files I wanted to save</span>
-    <a href="https://drive.google.com/file/d/1dV-W0VkFTyAdJVI_WKG7_9kDVMFC6N-q/view?usp=sharing">Download Test File</a>
+    <a href="https://drive.google.com/file/d/1dV-W0VkFTyAdJVI_WKG7_9kDVMFC6N-q/view?usp=sharing">Download Wav</a>
 
     <div id="results-area"></div>
   </body>
